<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.leothawne</groupId>
	<artifactId>LTItemMail</artifactId>
	<version>0.3.4</version>
	<name>LT Item Mail</name>
	<description>Have you ever imagined mailing items to your friends in Minecraft?</description>
	<build>
		<finalName>LT Item Mail</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
				<version>3.12.0</version>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <version>2.1.2</version>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>javadoc-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <failOnError>false</failOnError>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <charset>UTF-8</charset>
                    <show>public</show>
                </configuration>
                <version>2.10.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
                <version>2.5</version>
            </plugin>
		</plugins>
		<resources>
		    <resource>
		        <targetPath>${basedir}</targetPath>
		        <directory>${basedir}/src/main/resources</directory>
		        <filtering>true</filtering>
		    </resource>
		</resources>
	</build>
	<repositories>
		<repository>
			<id>spigotmc.org</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
	    	<id>vault</id>
	    	<url>http://nexus.hc.to/content/repositories/pub_releases/</url>
    	</repository>
		<repository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</repository>
	    <repository>
	        <id>redprotect</id>
	        <url>https://raw.githubusercontent.com/FabioZumbi12/RedProtect/mvn-repo/</url>
	    </repository>
	     <repository>
	     	<id>glaremasters</id>
	     	<url>https://repo.glaremasters.me/repository/towny/</url>
	    </repository>
	    <repository>
        	<id>sk89q</id>
        	<url>https://maven.enginehub.org/repo/</url>
    	</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.13-R0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
	        <groupId>net.milkbowl.vault</groupId>
	        <artifactId>VaultAPI</artifactId>
	        <version>1.7</version>
	        <scope>provided</scope>
    	</dependency>
    	<dependency>
	    	<groupId>com.github.TechFortress</groupId>
	    	<artifactId>GriefPrevention</artifactId>
	    	<version>16.18.1</version>
            <scope>provided</scope>
		</dependency>
	    <dependency>
	        <groupId>br.net.fabiozumbi12.RedProtect</groupId>
	        <artifactId>RedProtect-Core</artifactId>
	        <version>7.7.3</version>
	        <scope>provided</scope>
	    </dependency>
	    <dependency>
	        <groupId>br.net.fabiozumbi12.RedProtect</groupId>
	        <artifactId>RedProtect-Spigot</artifactId>
	        <version>7.7.3</version>
	        <scope>provided</scope>
	    </dependency>
	    <dependency>
	    	<groupId>com.palmergames.bukkit.towny</groupId>
	    	<artifactId>towny</artifactId>
	    	<version>0.100.0.0</version>
	    	<scope>provided</scope>
	    </dependency>
	    <dependency>
	        <groupId>com.sk89q.worldguard</groupId>
	        <artifactId>worldguard-bukkit</artifactId>
	        <version>7.0.9</version>
	        <scope>provided</scope>
    	</dependency>
	</dependencies>
</project>